Added about me title, about me image, and background design

--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <p>Hi! My name is Robert Moore. I grew up in Chapel Hill, NC, and I presently live in RTP/Durham, NC. 
+    <h1>About Me</h1>
+    
+    <p>
+    <img src="assets/images/suited.jpg" alt="Rob in a suit"
+    style="width:270px;height:350px;"> 
+        Hi! My name is Robert Moore. I grew up in Chapel Hill, NC, and I presently live in RTP/Durham, NC. 
 
             During high school I had an education focusing more on classic latin and history. While in school I excelled in chemistry and math, and ended up going to NC State University in Raleigh studying chemical engineering. 
             
