Added 6 images for portfolio to assets

--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <h1>Robert Moore</h1>
 
     <h1>About Me</h1>
-    
+    <h4>About</h4>
+    <h4>Portfolio</h4>
+    <h4>Contact</h4>
     <p>
     <img src="assets/images/suited.jpg" alt="Rob in a suit"
     style="width:270px;height:350px;"> 
