--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <h4>Contact</h4>
     <p>
     <img src="assets/images/suited.jpg" alt="Rob in a suit"
-    style="width:270px;height:350px;"> 
+    style="widows: 225px;px;height:295px;"> 
         Hi! My name is Robert Moore. I grew up in Chapel Hill, NC, and I presently live in RTP/Durham, NC. </p>
 
         <p>During high school I had an education focusing more on classic latin and history. While in school I excelled in chemistry and math, and ended up going to NC State University in Raleigh studying chemical engineering. 
@@ -27,5 +27,8 @@
            <p> In my free time I enjoy bodybuilding, reading, cooking, and language learning. My best languages after English are Russian and Hungarian. I also like watching Canes hockey and No-limit Texas Hold'em.
     </p>
 </div>
+
+<div class="footer">
+        <p>Footer</p>
 </body>
 </html>
