Styled name tag

--- a/index.html
+++ b/index.html
@@ -9,12 +9,21 @@
     <title>index</title>
 </head>
 <body>
-    <h1>Robert Moore</h1>
+    <div>
+        <h1>Robert Moore</h1>
+    </div>
+    <h4>
+        <ul>
+        
+        <li><a href="#About">About</a></li>
+        <li><a href="#Portfolio">Portfolio</a></li>
+        <li><a href="#Contact">Contact</a></li>
+      </ul>
+      </h4>
 <div class="content1">
     <h2>About Me</h2>
-    <h4>About</h4>
-    <h4>Portfolio</h4>
-    <h4>Contact</h4>
+    <hr>
+    <br>
     <p>
     <img src="assets/images/suited.jpg" alt="Rob in a suit"
     style="widows: 225px;px;height:295px;"> 
