Adjusted About me element

--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <title>index</title>
 </head>
 <body>
-    <div class="title">
+        
+    <div class="header">
+                    <div class="title">
         <h1>Robert Moore</h1>
     </div>
     <h4>
@@ -21,7 +23,7 @@
       </ul>
       </h4>
 <div class="content1">
-    <h2>About Me</h2>
+    <div class="About-Me">About Me</div>
     <hr>
     <br>
     <p>
