Added Link Colors and Div Classes

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
     <h1>Robert Moore</h1>
     </div>
     <h4>
-        <ul>
-        
-        <li><a href="#About">About</a></li>
-        <li><a href="#Portfolio">Portfolio</a></li>
-        <li><a href="#Contact">Contact</a></li>
+    <div class="Links">
+        <ul>  
+        <li><a href="Index.html">About</a></li>
+        <li><a href="Portfolio.html">Portfolio</a></li>
+        <li><a href="Contact.html">Contact</a></li>
       </ul>
+    </div>  
       </h4>
 <div class="content1">
     <div class="About-Me">About Me</div>
