Adjusted and colored links to other pages

--- a/index.html
+++ b/index.html
@@ -15,16 +15,20 @@
     <h1>Robert Moore</h1>
     </div>
     <h4>
-    <div class="Links">
+    <div class="links">
         <ul>  
-        <li><a href="Index.html">About</a></li>
-        <li><a href="Portfolio.html">Portfolio</a></li>
-        <li><a href="Contact.html">Contact</a></li>
+        <li><a href="Contact.html">Contact |</a></li>
+        <li><a href="Portfolio.html">Portfolio |</a></li>
+        <li><a href="Index.html">|  About  |</a></li>
       </ul>
     </div>  
       </h4>
 <div class="content1">
-    <div class="About-Me">About Me</div>
+    <div class="About-Me">
+    <strong>
+        About Me
+    </strong>    
+    </div>
     <hr>
     <br>
     <p>
