Added header lower border

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <li><a href="Index.html">|  About  |</a></li>
       </ul>
     </div>  
+</div>
       </h4>
 <div class="content1">
     <div class="About-Me">
