--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 
     <p>
     <h1>Robert Moore</h1>
-
+      <div class="form-1">
     <form action="/action_page.php">
         <label for="fname"><p>Full Name</p></label>
         <input type="text" id="fname" name="firstname" placeholder="Your full name..">
@@ -48,8 +48,11 @@
         <label for="subject"><p>Subject</p></label>
         <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
     
+        <br>
         <input type="submit" value="Submit">
       </form>
+    </div>
+    
     <h4>Submit</h4>
      <!-- Add Submit Button -->
 </div>
